# geometry_ir

./: .gitignore  AGENTS.md  LICENSE  README.md  main.md  pyproject.toml  solver_diagnostics.json  solver_report.md  ya.make
.github/prompts/: compile.prompt.md  lint.prompt.md
docs/: bnf.txt  optimizers.md  residuals.md
examples/: circle.gir  demo.gir  slvs_parallel_chords.py  solve_circle.py  solve_right_triangle.py  solve_trapezoid.py
examples/gir/: circle_triangle.gir  triangle_isosceles.gir  triangle_points.gir
geoscript_ir/: __init__.py  __main__.py  ast.py  consistency.py  constructions.py  ddc.py  demo.py  derive.py  desugar.py  lexer.py  logging_utils.py  numbers.py  orientation.py  parser.py  printer.py  projections.py  reference.py  reference_tikz.py  seeders.py  solver.py  validate.py
geoscript_ir/cad/: __init__.py  slvs_adapter.py
geoscript_ir/polish/: __init__.py
geoscript_ir/solver/: __init__.py  builder.py  cad_solver.py  config.py  initial_guess.py  math_utils.py  model.py  plan.py  seed.py  solver_core.py  translator.py  types.py  utils.py
geoscript_ir/tikz_codegen/: __init__.py  generator.py  utils.py
tests/: test_ast.py  test_bnf.py  test_cli.py  test_consistency.py  test_ddc.py  test_desugar.py  test_orientation.py  test_polish.py  test_printer.py  test_reference.py  test_seeding.py  test_slvs_adapter.py  test_smoke.py  test_solver.py  test_solver_facade.py  test_tikz_codegen.py  test_validation.py  ya.make
tests/integrational/: test_gir_scenes.py
tests/integrational/gir/: .gitignore  circle.gir  (+41 more)
tests/samples/: demo1.geo
