[project]
name = "geoscript-ir"
version = "0.1.0"
description = "GeoScript parser, validator, and desugarer"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
